# axum-best-practices

./: .env.example  .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20251229_063323_create_users.rs
src/: main.rs  routes.rs  start.rs  state.rs
src/core/: config.rs  constants.rs  enums.rs  error.rs  log.rs  mod.rs
src/dtos/: auth.rs  mod.rs  response.rs  user.rs
src/entity/: mod.rs  prelude.rs  users.rs
src/extractors/: claims.rs
src/handlers/: auth.rs  mod.rs  users.rs
src/middleware/: auth.rs
src/services/: auth.rs  user.rs
src/utils/: cache.rs  limiter.rs  mod.rs
